src/force-app/main/default/objects/copado__Deployment_Job__c/fields/copado__Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>copado__Git_Repository__c</fullName>
    <formula>copado__Step__r.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repository Id</label>
    <type>Text</type>
</CustomField>