src/force-app/main/default/objects/copado__Deployment_Job__c/fields/copado__Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Pipeline_Id__c</fullName>
    <formula>IF(
NOT(ISBLANK(copado__Step__r.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c)),
CASESAFEID(copado__Step__r.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c),
CASESAFEID(copado__Step__r.copado__Deployment__r.copado__Promotion__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Id</label>
    <type>Text</type>
</CustomField>